# ramen

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
.github/workflows/: style.yml  verification.yml
examples/: CMakeLists.txt  pull_model_thermostat.cpp  telegram_problem_push_model.cpp  thermostat_pull_model.cpp  thermostat_push_model.cpp
ramen/: .clang-tidy  ramen.hpp
test/: .clang-tidy  detail.cpp  public.cpp  test_detail.cpp
tests/: CMakeLists.txt  public.cpp
